tests/baselines/reference/classAndVariableWithSameName.errors.txt
==== tests/cases/compiler/classAndVariableWithSameName.ts (2 errors) ====
    class C { foo: string; }
    var C = ''; // error
        ~
!!! classAndVariableWithSameName.ts(2,5): error TS2000: Duplicate identifier 'C'. Additional locations:
!!! 	classAndVariableWithSameName.ts(1,1)
    
    module M {
        class D {
            bar: string;
        }
    
        var D = 1; // error
            ~
!!! classAndVariableWithSameName.ts(9,9): error TS2000: Duplicate identifier 'D'. Additional locations:
!!! 	classAndVariableWithSameName.ts(5,5)
    }